--- a/assets/css/poules.css
+++ b/assets/css/poules.css
@@ -1,12 +1,23 @@
 
 .poule-groupes {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+    padding: 10px;
+    text-align: center;
 }
 
 .poule-group {
     padding: 10px;
     text-align: center;
+    width: 13rem;
+}
+
+.poule-group-item {
+    display: flex;
+    padding-bottom: 0.2rem;
+    font-size: 1rem;
+    background-color: #f8f8f8;
 }
 
 .poule-title {
@@ -15,8 +26,14 @@
     border-radius: 7px 7px 0px 0;
     padding: 5px 5px;
     color: white;
-    font-weight: bold;
 }
 
 .poule-pays-name {
+    padding-left: 5px;
+}
+
+.poule-pays-order {
+    margin-left: auto;
+    padding-left: 1rem;
+    cursor: pointer;
 }
