--- a/assets/css/poules.css
+++ b/assets/css/poules.css
@@ -1,4 +1,17 @@
 
+.cmTitle {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.cmSubtitle {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.cmButton {
+}
+
 .poule-groupes {
     display: flex;
     justify-content: center;
