--- a/assets/css/LoginPage.css
+++ b/assets/css/LoginPage.css
@@ -29,13 +29,6 @@
     line-height: 2.5;
   }
 
-
-  
-.cmLoginButton:hover {
-    background-color: rgb(92,172,233);
-  }
-
-  
 .cmInput {
     display: block;
     padding: 15px 0 15px 5px;
@@ -48,4 +41,8 @@
     font-weight: 400;
     text-align: left;
     height: auto;
+  }
+
+  .cmLoginButton {
+    width: 100%
   }
