--- a/assets/css/FinaleGroups.css
+++ b/assets/css/FinaleGroups.css
@@ -1,7 +1,7 @@
 .cmFinales {
     display: flex;
     flex-direction: row;
-    align-items: end;
+    align-items: center;
     justify-content: center;
     padding-top: 2rem;
 }
