--- a/assets/css/TeamGroup.css
+++ b/assets/css/TeamGroup.css
@@ -20,3 +20,12 @@
     line-height: 2rem;
     border-radius: 0.5rem 0.5rem 0 0;
 }
+
+.cmTeamWarningIcon {
+    float: right;
+    margin-top: 0.5rem;
+    padding-right: 0.25rem;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+}
