--- a/assets/css/TeamGroup.css
+++ b/assets/css/TeamGroup.css
@@ -25,7 +25,7 @@
     float: right;
     margin-top: 0.5rem;
     padding-right: 0.25rem;
-    color: white;
+    color: #3084ae;
     font-size: 1rem;
     cursor: pointer;
 }
