--- a/assets/css/TopBanner.css
+++ b/assets/css/TopBanner.css
@@ -26,3 +26,12 @@
 
 .cmUserName {
 }
+
+.cmResultIcon {
+    float: left;
+    position: absolute;
+    top: 25%;
+    padding-left: 1rem;
+    cursor: pointer;
+    color: red;
+}
