--- a/assets/css/BetPage.scss
+++ b/assets/css/BetPage.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding-top: 1rem;
+    padding-top: 0.5rem;
 }
 
 .cmBetGroups {
@@ -44,7 +44,9 @@
     background-color: $headerColor;
     color: white;
     border-radius: 5rem 0 5rem 0;
-    margin-top: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 .cmGroupSeparator i {
