--- a/assets/css/FinaleGroups.css
+++ b/assets/css/FinaleGroups.css
@@ -1,7 +1,7 @@
 .cmFinales {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     flex-wrap: wrap;
 }
