--- a/assets/css/ResultsPage.scss
+++ b/assets/css/ResultsPage.scss
@@ -12,7 +12,6 @@
     tbody td:first-child {
         text-decoration: underline;
         cursor: pointer;
-
     }
 
     td, th {
@@ -23,6 +22,11 @@
     th {
         background-color: lighten($rankingTitle, 40%);
         font-weight: bold;
+        user-select: none;
+        cursor: pointer;
+    }
+    th:hover {
+        text-decoration: underline;
     }
         
     tr:nth-child(2n+1) {
