--- a/assets/css/EnterResultsPage.scss
+++ b/assets/css/EnterResultsPage.scss
@@ -10,6 +10,7 @@
 .cmEnterResultsTextBanner {
     @extend .cmGroupSeparator;
     border-radius: unset;
+    padding: 0.5rem 2rem 0.5rem 2rem;
 }
 
 .cmEnterResultsTitle {
