--- a/assets/css/ResultsPage.scss
+++ b/assets/css/ResultsPage.scss
@@ -44,7 +44,7 @@
     margin: 1em auto;
     overflow: hidden;
     width: 900px;
-    user-select: all;
+    user-select: text;
  }
 
  .cmRankingHeader {
